# ChangeLog for app-vim/vimcommander
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-vim/vimcommander/ChangeLog,v 1.21 2008/03/24 17:02:22 coldwind Exp $

  24 Mar 2008; Santiago M. Mola <coldwind@gentoo.org>
  vimcommander-1.54.2.9.ebuild:
  amd64 stable, quoting fixed.

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  28 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  vimcommander-1.54.2.9.ebuild:
  Stable on sparc

  19 Oct 2006; Aron Griffis <agriffis@gentoo.org>
  vimcommander-1.54.2.9.ebuild:
  Mark 1.54.2.9 stable on alpha

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  vimcommander-1.54.2.9.ebuild:
  ppc stable

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  vimcommander-1.54.2.9.ebuild:
  Mark 1.54.2.9 stable on ia64

  07 Apr 2006; Bryan Østergaard <kloeri@gentoo.org metadata.xml:
  Remove ciaranm from metadata.xml.

*vimcommander-1.54.2.9 (17 Dec 2005)

  17 Dec 2005; Ciaran McCreesh <ciaranm@gentoo.org>
  +vimcommander-1.54.2.9.ebuild:
  New version, bug #105131.

  30 Sep 2005; Luis Medinas <metalgod@gentoo.org>
  vimcommander-1.54.2.2.ebuild:
  Added ~amd64 keywords.

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  vimcommander-1.54.2.2.ebuild:
  Stable on ppc.

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org>
  -vimcommander-1.52.ebuild, vimcommander-1.54.2.2.ebuild:
  x86 stable, tidy up

  28 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  06 Sep 2004; Ciaran McCreesh <ciaranm@gentoo.org>
  vimcommander-1.54.2.2.ebuild:
  Display plugin help text, bug #62559

  20 Jun 2004; Ciaran McCreesh <ciaranm@gentoo.org>
  vimcommander-1.54.2.2.ebuild:
  Stable on sparc

  13 May 2004; Bryan Østergaard <kloeri@gentoo.org>
  vimcommander-1.54.2.2.ebuild:
  Stable on alpha.

  29 Mar 2004; David Holm <dholm@gentoo.org> vimcommander-1.54.2.2.ebuild:
  Added to ~ppc.
